<resources>
    <string name="app_name" translatable="false">FMP Live</string>
    <string name="action_settings">Settings</string>
    <string name="description">Description</string>
    <string name="example_application">Example application</string>
    <string name="todo">TODO</string>
    <string name="refresh_action">Refresh</string>
    <string name="search_action">Search</string>
    <string name="search_hint">Search a company</string>
    <string name="toast_success">Data retrieved successfully</string>
    <string name="shared_pref_saved_ok">List saved</string>
    <string name="toast_error">API Error</string>
    <string name="toast_selected">Selected:</string>
    <string name="toast_todo" translatable="false">TODO</string>
    <string name="detail_placeholder_text">Company detail screen</string>
    <string name="symbol">Symbol</string>
    <string name="website">Website</string>
    <string name="price">Price</string>
    <string name="exchange">Exchange</string>
    <string name="toggle_dark_mode">Toggle Dark Mode</string>
</resources>
