<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ismaelbalaghni.fmpproject.presentation.view.MainActivity">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:orderInCategory="100"
        android:title="@string/search_action"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/refresh_button"
        android:orderInCategory="101"
        android:title="@string/refresh_action"
        app:showAsAction="never" />

    <item
        android:id="@+id/dark_mode_toggle"
        android:orderInCategory="102"
        android:title="@string/toggle_dark_mode"
        app:showAsAction="never" />
</menu>
